@@ -6,6 +6,7 @@ v0.0.3
 
 - Rename assembly from Models to Amica.Models.
 - IntelliSense and documentantion support.
+- Add Company.IsAdministrativeAccount property.
 - Rename Predefinizioni class to Preferences
 - Rename ProfiloFiscale class to FiscalProfile
 - Rename RivalsaInps class to InpsReimbursement
